Fixed spacing issues with sharing buttons
New 200*100 rollover images for sharing buttons
Set heart:hover text indent to 25px

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
-	background-color: #808080;
+	background-color: white;
 	font-family: 'Trykker', serif;
 	color: #FEFCFF;
 	}
-	
+
 #middle {
 	width: 520px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #CD4E0E;
+	background-color: blue;
 	padding-left: 10px;
 	padding-right: 10px;
 	}
@@ -51,6 +51,7 @@ h1 {
 	height: 138px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	padding-left: 10px;
 	}
 
 .circle {
@@ -58,14 +59,26 @@ h1 {
 	position: relative;
 	text-indent: -9999px;
 	border-radius: 50%;
-	width: 100px;
-	height: 100px;
-	margin-right: 10px;
+	width: 91px;
+	height: 91px;
+	margin-right: 19px;
 	border: 9px solid #FEFCFF;
 	background-repeat: no-repeat;
-	background-position: 0px 0px;
+	background-position: -5px -5px;
 	text-align: center;
-	vertical-align: middle;
+	}
+
+.circletext {
+	position: absolute;
+	top: 50%;
+	height: 36px;
+	margin-top: -18px;
+	}
+
+.circle:hover {
+    background-position: -105px -5px;
+	text-indent: 0px;
+	text-decoration: none;
 	}
 
 .heart {
@@ -80,13 +93,6 @@ h1 {
 	background-image: url(/images/heart.png); 
 	}
 
-.circletext {
-	position: absolute;
-	top: 50%;
-	height: 36px;
-	margin-top: -18px;
-	}
-
 .hearttext {
 	position: absolute;
 	top: 50%;
@@ -94,14 +100,8 @@ h1 {
 	margin-top: -20px;
 	}
 
-.circle:hover {
-    background-position: -100px 0px;
-	text-indent: 0px;
-	text-decoration: none;
-	}
-	
 .heart:hover {
     background-position: -114px 5px;
-	text-indent: 0px;
+	text-indent: 25px;
 	text-decoration: none;
 	}
